--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "history": "^5.0.0",
     "husky": "^4.2.1",
     "lint-staged": "^10.0.7",
     "node-sass": "^4.14.1",
